--- a/WoWDatabaseEditorCore.Avalonia/Services/CreatureEntrySelectorService/GenericSelectorDialogView.axaml
+++ b/WoWDatabaseEditorCore.Avalonia/Services/CreatureEntrySelectorService/GenericSelectorDialogView.axaml
@@ -4,6 +4,7 @@
                          xmlns:prism="http://prismlibrary.com/"
                          xmlns:utils="clr-namespace:WDE.Common.Avalonia.Utils;assembly=WDE.Common.Avalonia"
                          xmlns:controls="clr-namespace:WDE.Common.Avalonia.Controls;assembly=WDE.Common.Avalonia"
+                         xmlns:controls1="clr-namespace:AvaloniaStyles.Controls;assembly=AvaloniaStyles"
                          prism:ViewModelLocator.AutoWireViewModel="False">
     <controls:DialogViewBase.ToolBar>
         <TextBox x:Name="SearchBox" 
@@ -11,6 +12,7 @@
                  Text="{Binding SearchText}" 
                  Width="300" 
                  utils:FocusUtils.FocusFirst="True"
+                 KeyDown="SearchBox_OnKeyDown"
                  HorizontalAlignment="Right" />
     </controls:DialogViewBase.ToolBar>
 
@@ -19,18 +21,17 @@
             <RowDefinition />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
-        <DataGrid SelectedItem="{Binding SelectedItem, Mode=TwoWay}" 
-                  Items="{Binding FilteredItems}"
-                  Margin="0,0,0,6"
-                  IsReadOnly="True"
-                  utils:DataGridColumns.ColumnsSource="{Binding Columns}"
-                  AutoGenerateColumns="False">
+        <controls1:GridView  SelectedItem="{Binding SelectedItem, Mode=TwoWay}" 
+                             Items="{Binding FilteredItems}"
+                             Margin="0,0,0,6"
+                             Name="GridView"
+                             utils:DataGridColumns.ColumnsSource="{Binding Columns}">
             <Interaction.Behaviors>
                 <EventTriggerBehavior EventName="DoubleTapped">
                     <InvokeCommandAction Command="{Binding #Root.DataContext.Accept}" />
                 </EventTriggerBehavior>
             </Interaction.Behaviors>
-        </DataGrid>
+        </controls1:GridView>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
