--- a/WDE.SmartScriptEditor.Avalonia/Themes/Generic.axaml
+++ b/WDE.SmartScriptEditor.Avalonia/Themes/Generic.axaml
@@ -256,7 +256,7 @@
                                                         IsVisible="{Binding HasItems}" />
                                                 <controls:ParameterTextBox VerticalContentAlignment="Center"
                                                                            Text="{Binding Parameter.Value, Mode=TwoWay}"
-                                                                           FontFamily="Consolas"
+                                                                           FontFamily="Consolas,Menlo,Courier,Courier New"
                                                                            Classes="InnerContentWithPadding">
                                                     <controls:ParameterTextBox.Styles>
                                                         <Style
@@ -272,7 +272,7 @@
                                                         <Border Cursor="Ibeam">
                                                             <TextBlock Text="{Binding Parameter.String, Mode=OneWay}"
                                                                        VerticalAlignment="Center"
-                                                                       Margin="0,1,0,0" />
+                                                                       Margin="0,0,0,0" />
                                                         </Border>
                                                     </controls:ParameterTextBox.InnerLeftContent>
                                                 </controls:ParameterTextBox>
