--- a/AvaloniaStyles/Styles/MacOsBigSurDark.xaml
+++ b/AvaloniaStyles/Styles/MacOsBigSurDark.xaml
@@ -1,5 +1,7 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/Style.xaml"/>
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/ColorsDark.xaml"/>
 </Styles>
