--- a/WoWDatabaseEditorCore.Avalonia/Services/CreatureEntrySelectorService/GenericSelectorDialogView.axaml
+++ b/WoWDatabaseEditorCore.Avalonia/Services/CreatureEntrySelectorService/GenericSelectorDialogView.axaml
@@ -7,13 +7,12 @@
                          xmlns:controls1="clr-namespace:AvaloniaStyles.Controls;assembly=AvaloniaStyles"
                          prism:ViewModelLocator.AutoWireViewModel="False">
     <controls:DialogViewBase.ToolBar>
-        <TextBox x:Name="SearchBox" 
-                 Padding="2,4" 
-                 Text="{Binding SearchText}" 
-                 Width="300" 
-                 utils:FocusUtils.FocusFirst="True"
-                 KeyDown="SearchBox_OnKeyDown"
-                 HorizontalAlignment="Right" />
+        <controls:FixedTextBox x:Name="SearchBox" 
+                               Padding="2,4" 
+                               Text="{Binding SearchText}"
+                               utils:FocusUtils.FocusFirst="True"
+                               KeyDown="SearchBox_OnKeyDown"
+                               HorizontalAlignment="Stretch" />
     </controls:DialogViewBase.ToolBar>
 
     <Grid Margin="6">
